# ChangeLog for virtual/latex-base
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/latex-base/ChangeLog,v 1.5 2008/02/12 20:05:57 opfer Exp $

  12 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  latex-base-1.0.ebuild:
  Adjust DESCRIPTION and HOMEPAGE field

  11 Dec 2007; Alexis Ballier <aballier@gentoo.org> latex-base-1.0.ebuild:
  remove cstetex references, its being removed, part of bug #196673

  14 Oct 2007; Alexis Ballier <aballier@gentoo.org> latex-base-1.0.ebuild:
  use texlive-latexrecommended rather than just texlive-latex, it provides
  more packages and will be more reliable for deps

*latex-base-1.0 (14 Oct 2007)

  14 Oct 2007; Alexis Ballier <aballier@gentoo.org> +metadata.xml,
  +latex-base-1.0.ebuild:
  initial import of latex-base virtual, see gentoo-dev ml
