@@ -1,3 +1,3 @@
-EBUILD latex-base-1.0.ebuild 576 RMD160 0dcdf2f68129f3ead60f3d368d996192b414b63d SHA1 603fbeab7685c40425dc527b94574f2ba1d5db76 SHA256 d3e83bb8b2fd0080efca4907553595ec687f09c28e2214dd697515d966a968c7
-MISC ChangeLog 858 RMD160 08c454d82d17520d4612fe5092c84f32afbd379a SHA1 22e2cd80197aa8df9cd745c608873dc117437d74 SHA256 38306bf352d7fe0f0474b941ad662bfb3467e5238ea09b3dd9af68afb2f74e2f
+EBUILD latex-base-1.0.ebuild 560 RMD160 68a289bc0c7e6fd6f33affdbfac4c94d020ccf55 SHA1 9eba7246c246f66d782afff20519959023687672 SHA256 f30e3dd803c24d901f8f6febae7404bdefff1a537ad3b39bf123b4ccf2956893
+MISC ChangeLog 977 RMD160 22437e2a566e4b1446c9ce9c1c4aee8632910019 SHA1 5dc6a5cdf9a0ed0375b4972b1d73a029dfd623de SHA256 ddfead040af8787cbbe3d59049e53586290f8491f59e1126cd7c99d462d16c5e
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
