@@ -1,6 +1,10 @@
 # ChangeLog for virtual/latex-base
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/latex-base/ChangeLog,v 1.5 2008/02/12 20:05:57 opfer Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/latex-base/ChangeLog,v 1.6 2009/05/05 07:21:53 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  latex-base-1.0.ebuild:
+  remove app-text/tetex as a provider
 
   12 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
   latex-base-1.0.ebuild:
